syntax="proto3";

package user;

option go_package="/genproto";

import "google/protobuf/timestamp.proto";

service User{
    rpc GetUser(UserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateRequest) returns (UpdateResponse);
    rpc DeleteUser(DeleteRequest) returns (DeleteResponse);
    rpc GetUserProfile(ProfileRequest) returns (ProfileResponse);
    rpc UpdateUserProfile(ProfileUpdateRequest) returns (ProfileUpdateResponse);
}

message UserRequest {
    string UserID = 1;
}

message UserResponse {
    string UserName = 1;
    string Email = 2;
    string PasswordHash = 3;
    google.protobuf.Timestamp CreatedAt = 4;
    google.protobuf.Timestamp UpdatedAt = 5;
    google.protobuf.Timestamp DeletedAt = 6;
}

message UpdateRequest {
    string UserID = 1;
}

message UpdateResponse {
    string UserName = 2;
    string Email = 3;
    string PasswordHash = 4;
    google.protobuf.Timestamp CreatedAt = 5;
    google.protobuf.Timestamp UpdatedAt = 7;
    google.protobuf.Timestamp DeletedAt = 8;
}

message DeleteRequest {
    string UserID = 1;
}

message DeleteResponse {
    string message = 1;
}

message ProfileRequest {
    string UserID = 1;
}

message ProfileResponse {
    string FullName = 1;
    string Bio = 2;
    string Expertise = 3;
    string Location = 4;
    string AvatarUrl = 5;
}

message ProfileUpdateRequest {
    string UserID = 1;
}

message ProfileUpdateResponse {
    string FullName = 1;
    string Bio = 2;
    string Expertise = 3;
    string Location = 4;
    string AvatarUrl = 5;
}
